antlr-generated/PythonParser.java
// $ANTLR 3.5 /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g 2014-02-04 17:50:34

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

/** Python 2.3.3 Grammar
 *
 *  Terence Parr and Loring Craymer
 *  February 2004
 *
 *  Converted to ANTLR v3 November 2005 by Terence Parr.
 *
 *  This grammar was derived automatically from the Python 2.3.3
 *  parser grammar to get a syntactically correct ANTLR grammar
 *  for Python.  Then Terence hand tweaked it to be semantically
 *  correct; i.e., removed lookahead issues etc...  It is LL(1)
 *  except for the (sometimes optional) trailing commas and semi-colons.
 *  It needs two symbols of lookahead in this case.
 *
 *  Starting with Loring's preliminary lexer for Python, I modified it
 *  to do my version of the whole nasty INDENT/DEDENT issue just so I
 *  could understand the problem better.  This grammar requires
 *  PythonTokenStream.java to work.  Also I used some rules from the
 *  semi-formal grammar on the web for Python (automatically
 *  translated to ANTLR format by an ANTLR grammar, naturally <grin>).
 *  The lexical rules for python are particularly nasty and it took me
 *  a long time to get it 'right'; i.e., think about it in the proper
 *  way.  Resist changing the lexer unless you've used ANTLR a lot. ;)
 *
 *  I (Terence) tested this by running it on the jython-2.1/Lib
 *  directory of 40k lines of Python.
 *  
 */
@SuppressWarnings("all")
public class PythonParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALT_NOTEQUAL", "AMPER", "AMPEREQUAL", 
		"AND", "ASSIGN", "AT", "BACKQUOTE", "CIRCUMFLEX", "CIRCUMFLEXEQUAL", "COLON", 
		"COMMA", "COMMENT", "COMPLEX", "CONTINUED_LINE", "DEDENT", "DIGITS", "DOT", 
		"DOUBLESLASH", "DOUBLESLASHEQUAL", "DOUBLESTAR", "DOUBLESTAREQUAL", "EQUAL", 
		"ESC", "Exponent", "FLOAT", "GREATER", "GREATEREQUAL", "INDENT", "INT", 
		"LBRACK", "LCURLY", "LEADING_WS", "LEFTSHIFT", "LEFTSHIFTEQUAL", "LESS", 
		"LESSEQUAL", "LONGINT", "LPAREN", "MINUS", "MINUSEQUAL", "NAME", "NEWLINE", 
		"NOT", "NOTEQUAL", "OR", "PERCENT", "PERCENTEQUAL", "PLUS", "PLUSEQUAL", 
		"RBRACK", "RCURLY", "RIGHTSHIFT", "RIGHTSHIFTEQUAL", "RPAREN", "SEMI", 
		"SLASH", "SLASHEQUAL", "STAR", "STAREQUAL", "STRING", "TILDE", "TRIAPOS", 
		"TRIQUOTE", "VBAR", "VBAREQUAL", "WS", "'as'", "'assert'", "'break'", 
		"'class'", "'continue'", "'def'", "'del'", "'elif'", "'else'", "'except'", 
		"'exec'", "'finally'", "'for'", "'from'", "'global'", "'if'", "'import'", 
		"'in'", "'is'", "'lambda'", "'pass'", "'print'", "'raise'", "'return'", 
		"'try'", "'while'", "'with'", "'yield'"
	};
	public static final int EOF=-1;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int T__96=96;
	public static final int T__97=97;
	public static final int ALT_NOTEQUAL=4;
	public static final int AMPER=5;
	public static final int AMPEREQUAL=6;
	public static final int AND=7;
	public static final int ASSIGN=8;
	public static final int AT=9;
	public static final int BACKQUOTE=10;
	public static final int CIRCUMFLEX=11;
	public static final int CIRCUMFLEXEQUAL=12;
	public static final int COLON=13;
	public static final int COMMA=14;
	public static final int COMMENT=15;
	public static final int COMPLEX=16;
	public static final int CONTINUED_LINE=17;
	public static final int DEDENT=18;
	public static final int DIGITS=19;
	public static final int DOT=20;
	public static final int DOUBLESLASH=21;
	public static final int DOUBLESLASHEQUAL=22;
	public static final int DOUBLESTAR=23;
	public static final int DOUBLESTAREQUAL=24;
	public static final int EQUAL=25;
	public static final int ESC=26;
	public static final int Exponent=27;
	public static final int FLOAT=28;
	public static final int GREATER=29;
	public static final int GREATEREQUAL=30;
	public static final int INDENT=31;
	public static final int INT=32;
	public static final int LBRACK=33;
	public static final int LCURLY=34;
	public static final int LEADING_WS=35;
	public static final int LEFTSHIFT=36;
	public static final int LEFTSHIFTEQUAL=37;
	public static final int LESS=38;
	public static final int LESSEQUAL=39;
	public static final int LONGINT=40;
	public static final int LPAREN=41;
	public static final int MINUS=42;
	public static final int MINUSEQUAL=43;
	public static final int NAME=44;
	public static final int NEWLINE=45;
	public static final int NOT=46;
	public static final int NOTEQUAL=47;
	public static final int OR=48;
	public static final int PERCENT=49;
	public static final int PERCENTEQUAL=50;
	public static final int PLUS=51;
	public static final int PLUSEQUAL=52;
	public static final int RBRACK=53;
	public static final int RCURLY=54;
	public static final int RIGHTSHIFT=55;
	public static final int RIGHTSHIFTEQUAL=56;
	public static final int RPAREN=57;
	public static final int SEMI=58;
	public static final int SLASH=59;
	public static final int SLASHEQUAL=60;
	public static final int STAR=61;
	public static final int STAREQUAL=62;
	public static final int STRING=63;
	public static final int TILDE=64;
	public static final int TRIAPOS=65;
	public static final int TRIQUOTE=66;
	public static final int VBAR=67;
	public static final int VBAREQUAL=68;
	public static final int WS=69;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public PythonParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public PythonParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return PythonParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g"; }



	// $ANTLR start "single_input"
	// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:77:1: single_input : ( NEWLINE | simple_stmt | compound_stmt NEWLINE );
	public final void single_input() throws RecognitionException {
		try {
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:77:14: ( NEWLINE | simple_stmt | compound_stmt NEWLINE )
			int alt1=3;
			switch ( input.LA(1) ) {
			case NEWLINE:
				{
				alt1=1;
				}
				break;
			case BACKQUOTE:
			case COMPLEX:
			case FLOAT:
			case INT:
			case LBRACK:
			case LCURLY:
			case LONGINT:
			case LPAREN:
			case MINUS:
			case NAME:
			case NOT:
			case PLUS:
			case STRING:
			case TILDE:
			case 71:
			case 72:
			case 74:
			case 76:
			case 80:
			case 83:
			case 84:
			case 86:
			case 89:
			case 90:
			case 91:
			case 92:
			case 93:
			case 97:
				{
				alt1=2;
				}
				break;
			case AT:
			case 73:
			case 75:
			case 82:
			case 85:
			case 94:
			case 95:
			case 96:
				{
				alt1=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:77:16: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_single_input46); if (state.failed) return;
					}
					break;
				case 2 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:78:16: simple_stmt
					{
					pushFollow(FOLLOW_simple_stmt_in_single_input63);
					simple_stmt();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:79:16: compound_stmt NEWLINE
					{
					pushFollow(FOLLOW_compound_stmt_in_single_input80);
					compound_stmt();
					state._fsp--;
					if (state.failed) return;
					match(input,NEWLINE,FOLLOW_NEWLINE_in_single_input82); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "single_input"



	// $ANTLR start "file_input"
	// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:82:1: file_input : ( NEWLINE | stmt )* ;
	public final void file_input() throws RecognitionException {
		try {
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:82:12: ( ( NEWLINE | stmt )* )
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:82:14: ( NEWLINE | stmt )*
			{
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:82:14: ( NEWLINE | stmt )*
			loop2:
			while (true) {
				int alt2=3;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==NEWLINE) ) {
					alt2=1;
				}
				else if ( ((LA2_0 >= AT && LA2_0 <= BACKQUOTE)||LA2_0==COMPLEX||LA2_0==FLOAT||(LA2_0 >= INT && LA2_0 <= LCURLY)||(LA2_0 >= LONGINT && LA2_0 <= MINUS)||LA2_0==NAME||LA2_0==NOT||LA2_0==PLUS||(LA2_0 >= STRING && LA2_0 <= TILDE)||(LA2_0 >= 71 && LA2_0 <= 76)||LA2_0==80||(LA2_0 >= 82 && LA2_0 <= 86)||(LA2_0 >= 89 && LA2_0 <= 97)) ) {
					alt2=2;
				}

				switch (alt2) {
				case 1 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:82:15: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_file_input105); if (state.failed) return;
					}
					break;
				case 2 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:82:25: stmt
					{
					pushFollow(FOLLOW_stmt_in_file_input109);
					stmt();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop2;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "file_input"



	// $ANTLR start "eval_input"
	// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:85:1: eval_input : ( NEWLINE )* testlist ( NEWLINE )* ;
	public final void eval_input() throws RecognitionException {
		try {
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:85:12: ( ( NEWLINE )* testlist ( NEWLINE )* )
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:85:14: ( NEWLINE )* testlist ( NEWLINE )*
			{
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:85:14: ( NEWLINE )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==NEWLINE) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:85:15: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_eval_input132); if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}

			pushFollow(FOLLOW_testlist_in_eval_input136);
			testlist();
			state._fsp--;
			if (state.failed) return;
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:85:34: ( NEWLINE )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==NEWLINE) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:85:35: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_eval_input139); if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "eval_input"



	// $ANTLR start "decorators"
	// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:88:1: decorators : ( decorator )+ ;
	public final void decorators() throws RecognitionException {
		try {
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:88:11: ( ( decorator )+ )
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:88:13: ( decorator )+
			{
			// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:88:13: ( decorator )+
			int cnt5=0;
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==AT) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/jenniferjacobs/Desktop/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/Python.g:88:13: decorator
					{
					pushFollow(FOLLOW_decorator_in_decorators160);
					decorator();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt5 >= 1 ) break loop5;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(5, input);
					throw eee;
				}
				cnt5++;
			}

			}
